--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "url": "https://github.com/skt-t1-byungi/event-emitter/issues"
   },
   "homepage": "https://github.com/skt-t1-byungi/event-emitter#readme",
-  "dependencies": {}
+  "dependencies": {
+    "@skt-t1-byungi/array-filter": "^0.1.0",
+    "@skt-t1-byungi/array-for-each": "^0.1.0"
+  }
 }
