--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,8 @@
   "compilerOptions": {
     "target": "es5", 
     "module": "commonjs",
-    "lib": ["es2018"],  
+    "lib": ["es2015"],  
     "declaration": true, 
-    "strict": true,
-    "esModuleInterop": true
+    "strict": true
   }
 }
