--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "module": "dist/index.mjs",
     "unpkg": "dist/index.umd.min.js",
     "types": "index.d.ts",
+    "engines": {
+        "node": ">= 6"
+    },
     "files": [
         "dist"
     ],
