--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": "skt-t1-byungi <tiniwz@gmail.com>",
     "repository": "https://github.com/skt-t1-byungi/event-emitter.git",
     "main": "dist/index.umd.js",
-    "module": "dist/index.mjs",
+    "module": "dist/index.esm.js",
     "unpkg": "dist/index.umd.js",
     "types": "index.d.ts",
     "engines": {
@@ -18,28 +18,27 @@
     "keywords": [
         "event",
         "emitter",
-        "old",
         "ie"
     ],
     "license": "MIT",
     "scripts": {
-        "build": "rm -rf dist && bili src/index.ts --format esm,umd --module-name EventEmitter",
+        "build": "rm -rf dist && bili src/index.ts --format esm,umd --module-name EventEmitter --bundle-node-modules",
         "test": "ava",
         "prepublishOnly": "npm run test && npm run build"
     },
     "dependencies": {
-        "@skt-t1-byungi/array-filter": "^0.1.0",
-        "@skt-t1-byungi/array-find-index": "^0.1.0",
-        "@skt-t1-byungi/array-for-each": "^0.1.0"
+        "@skt-t1-byungi/array-filter": "^0.2.0",
+        "@skt-t1-byungi/array-find-index": "^0.2.0",
+        "@skt-t1-byungi/array-for-each": "^0.2.0"
     },
     "devDependencies": {
-        "ava": "^1.2.1",
-        "bili": "^4.2.5",
-        "rollup-plugin-typescript2": "^0.19.2",
-        "ts-node": "^8.0.2",
-        "tslint": "^5.12.1",
-        "tslint-config-byungi": "^0.1.0",
-        "typescript": "^3.3.3"
+        "ava": "^1.4.1",
+        "bili": "^4.7.3",
+        "rollup-plugin-typescript2": "^0.20.1",
+        "ts-node": "^8.1.0",
+        "tslint": "^5.15.0",
+        "tslint-config-byungi": "^0.1.1",
+        "typescript": "^3.4.3"
     },
     "publishConfig": {
         "access": "public"
