--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "main": "dist/index.umd.js",
     "module": "dist/index.esm.js",
     "unpkg": "dist/index.umd.js",
-    "types": "index.d.ts",
+    "types": "dist/index.d.ts",
     "engines": {
         "node": ">= 6"
     },
     "files": [
-        "dist/",
-        "index.d.ts"
+        "dist/"
     ],
     "keywords": [
         "event",
