--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@byungi/event-emitter",
-    "description": "tiny event emitter",
+    "description": "A tiny event emitter that works old browser, and supports typescript.",
     "version": "1.0.5",
     "author": "skt-t1-byungi <tiniwz@gmail.com>",
     "repository": "https://github.com/skt-t1-byungi/event-emitter.git",
