--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,11 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "lib": ["dom", "es2015"],
-        "module": "commonjs",
+        "lib": ["dom"],
+        "module": "ESNext",
+        "moduleResolution": "Node",
         "declaration": true,
-        "esModuleInterop": true,
         "strict": true,
         "outDir": "./dist"
-    },
-    "files": [
-        "src/index.ts"
-    ]
+    }
 }
