--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@byungi/event-emitter",
-    "description": "Small (< 600Byte), type-safe event emitter that support old browsers.",
+    "description": "Small (< 600Byte), type-safe event emitter that support old browsers",
     "version": "1.1.0",
     "author": "skt-t1-byungi <tiniwz@gmail.com>",
     "repository": "https://github.com/skt-t1-byungi/event-emitter.git",
