--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
     },
     "devDependencies": {
         "@types/jest": "^25.2.1",
-        "eslint": "^6",
-        "eslint-config-byungi": "^0.11.1",
         "jest": "^26.0.1",
         "microbundle": "^0.12.0",
         "ts-jest": "^25.5.1",
@@ -40,11 +38,10 @@
     "publishConfig": {
         "access": "public"
     },
-    "eslintConfig": {
-        "extends": "byungi/typescript"
-    },
-    "eslintIgnore": [
-        "*.js",
-        "dist"
-    ]
+    "prettier": {
+        "arrowParens": "avoid",
+        "semi": false,
+        "singleQuote": true,
+        "printWidth": 120
+    }
 }
